# sot-alliance-bot

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
cmake/: FindDPP.cmake
include/bot/: AllianceBot.hpp  AllianceHelpers.hpp
include/bot/commands/: CancelAllianceCommand.hpp  CreateAllianceCommand.hpp  EditAllianceCommand.hpp  EndAllianceCommand.hpp  ISlashCommand.hpp  JoinAllianceCommand.hpp  LeaveAllianceCommand.hpp  SetupCommand.hpp  StartAllianceCommand.hpp
include/bot/ui/: CancelAllianceUI.hpp  CreateAllianceUI.hpp  EditAllianceUI.hpp  EndAllianceUI.hpp  IModalUI.hpp  JoinAllianceUI.hpp  LeaveAllianceUI.hpp  SetupUI.hpp
include/db/: Database.hpp  Schema.hpp
include/model/: alliance_discord_objects.hxx  alliance_participants.hxx  alliances.hxx  bot_settings.hxx  ships.hxx  users.hxx
include/util/: env.hpp
src/: main.cpp
src/bot/: AllianceBot.cpp  AllianceHelpers.cpp
src/bot/commands/: CancelAllianceCommand.cpp  CreateAllianceCommand.cpp  EditAllianceCommand.cpp  EndAllianceCommand.cpp  JoinAllianceCommand.cpp  LeaveAllianceCommand.cpp  SetupCommand.cpp  StartAllianceCommand.cpp
src/bot/ui/: CancelAllianceUI.cpp  CreateAllianceUI.cpp  EditAllianceUI.cpp  EndAllianceUI.cpp  JoinAllianceUI.cpp  LeaveAllianceUI.cpp  SetupUI.cpp
src/db/: Database.cpp  Schema.cpp
